--- a/index.html
+++ b/index.html
@@ -4,32 +4,49 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Weather Dashboard</title>
-
     <!-- Bootstrap CSS  -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-
-    <!-- CSS  -->
-
-  </head>
-
-  <body>
-
-    <!-- Container and colums using Bootstrap  -->
-
-<div class="container">
-<!-- container for Weather Dashboard banner  -->
-    <div class="row text-center">
-    <div class="text-primary-emphasis bg-primary-subtle border border-primary-subtle rounded-3"><h1>Weather Dashboard</h1>
-    </div>
-</div>
-
   
+    <title>The Weather Dashboard</title>
+  </head>
+  <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>⛅</text></svg>">
+</head>
+
+<body>
+<!-- Weather Dashboard header  -->
+    <div class = "bg-primary text-white text-center p-3">
+        <h1>The Weather Dashboard</h1>
     </div>
-  </body>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+    <!-- Search for a city and search history displayed  -->
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-12 col-md-3 p-2">
+                <form class="border p-2" id="searchCity">
+                    <h3>Search for a City</h3>
+                    <input id="city" type = "text" class = "form-input"/>
+                    <button class="btn btn-primary" type = "submit">Search</button>
+                </form>
+                <div class="border" id="searchHistory">   
+                </div>
+            </div>
 
-    <script src="script.js"></script>
-  </body>
-</html>
+        <!-- Current Forecast  -->
+            <div class="col-12 col-md-9">
+                <div class="row border" id="currentForecast">
+                    <div class="col-12">
+                        <h2 id="currentCity"></h2>
+                        <div id="currentWeatherColumn" class="list-group"></div>
+                    </div>  
+                </div>
+        <!-- Five Day Forecast  -->
+                <div class="row border" id = "fiveDayForecast">
+                        <h2 class="col-12" id = "forecast"></h2>
+                        <div class="d-inline-flex p-2" id = "fiveDayColumn"></div>
+                </div>  
+            </div>
+        </div>
+    </div>
+<script src="script.js"></script>
+</body>
+  </html>
