--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="col-12 col-md-3 p-2">
                 <form class="border p-2" id="searchCity">
                     <h3>Search for a City</h3>
-                    <input id="city" type = "text" class = "form-input"/>
+                    <input id="city" type = "text" placeholder = "Placerville" class = "form-input"/>
                     <button class="btn btn-primary" type = "submit">Search</button>
                 </form>
                 <div class="border" id="searchHistory">   
@@ -47,6 +47,7 @@
             </div>
         </div>
     </div>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js"></script>
 <script src="script.js"></script>
 </body>
   </html>
